# veinmap

./: .gitignore  CONTRIBUTING.md  LICENSE  PROPOSAL.md  README.md  pyproject.toml  requirements.txt
data/checklists/: dns.yaml  ftp.yaml  http.yaml  kerberos.yaml  ldap.yaml  mssql.yaml  nfs.yaml  rdp.yaml  smb.yaml  smtp.yaml  snmp.yaml  ssh.yaml  winrm.yaml
data/commands/: ad_attacks.yaml  enumeration.yaml  exploitation.yaml  lateral_movement.yaml  privesc.yaml
templates/: report_cpts.md.j2  report_generic.md.j2
tests/: test_checklist.py  test_cli.py  test_credential.py  test_host.py  test_report.py
veinmap/: __init__.py  cli.py  db.py  tui.py
veinmap/engines/: checklist_engine.py  command_ref.py  report_engine.py
veinmap/models/: credential.py  finding.py  host.py  pivot.py  timeline.py
